Set up crash handling

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -19,6 +19,7 @@ Dependencies:
     'frameworks/purpose': '@latest-kf6'
     'frameworks/kirigami': '@latest-kf6'
     'frameworks/kguiaddons': '@latest-kf6'
+    'frameworks/kcrash': '@latest-kf6'
     'frameworks/kstatusnotifieritem': '@latest-kf6'
     'frameworks/prison': '@latest-kf6'
     'plasma/kpipewire': '@latest-kf6'
