Use declarative registration for most C++ types
This both makes it easier to add C++ types in the future and also makes
the current code a bit clearer by placing the type registration in the
relevant type rather than in the middle of some unrelated C++ file.

Some objects that were registered as singleton instances have been
dropped as they have accessors in other singletons already and are
actually not singletons on the C++ side.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -138,6 +138,7 @@ target_link_libraries(spectacle PRIVATE
 target_include_directories(spectacle PRIVATE
     "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/Gui>"
     "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/Gui/Annotations>"
+    "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/Platforms>"
 )
 
 set_source_files_properties(Gui/QmlUtils.qml PROPERTIES
