--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,7 +17,7 @@ ecm_qt_declare_logging_category(SPECTACLE_SRCS
 )
 
 add_executable(spectacle)
-qt_add_qml_module(spectacle URI ${SPECTACLE_QML_URI})
+qt_add_qml_module(spectacle URI ${SPECTACLE_QML_URI} DEPENDENCIES QtCore QtQuick)
 
 target_sources(spectacle PRIVATE
     ${SPECTACLE_SRCS}
