Use Plasma version instead of Gear version
Spectacle switched to Plasma release schedule

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,15 @@
-
-# KDE Application Version, managed by release script
-set(RELEASE_SERVICE_VERSION_MAJOR "25")
-set(RELEASE_SERVICE_VERSION_MINOR "03")
-set(RELEASE_SERVICE_VERSION_MICRO "70")
-set(RELEASE_SERVICE_VERSION "${RELEASE_SERVICE_VERSION_MAJOR}.${RELEASE_SERVICE_VERSION_MINOR}.${RELEASE_SERVICE_VERSION_MICRO}")
-set(SPECTACLE_VERSION ${RELEASE_SERVICE_VERSION})
-# minimum requirements
-
 cmake_minimum_required (VERSION 3.16 FATAL_ERROR)
+# Managed by release script
+set(PROJECT_VERSION "6.2.80")
+set(SPECTACLE_VERSION ${PROJECT_VERSION})
+
 # Spectacle project
 project(Spectacle VERSION ${SPECTACLE_VERSION})
 
-set(QT_MIN_VERSION "6.6.0")
-set(KF_MIN_VERSION "6.3.0")
+# minimum requirements
+set(PROJECT_DEP_VERSION "6.2.0")
+set(QT_MIN_VERSION "6.7.0")
+set(KF_MIN_VERSION "6.5.0")
 
 find_package(ECM ${KF_MIN_VERSION} REQUIRED NO_MODULE)
 set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH})
