Use Plasma versioning for KF6

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,9 +9,9 @@ project(Spectacle VERSION ${SPECTACLE_VERSION})
 # minimum requirements
 set(PROJECT_DEP_VERSION "6.2.90")
 set(QT_MIN_VERSION "6.7.0")
-set(KF_MIN_VERSION "6.5.0")
+set(KF6_MIN_VERSION "6.10.0")
 
-find_package(ECM ${KF_MIN_VERSION} REQUIRED NO_MODULE)
+find_package(ECM ${KF6_MIN_VERSION} REQUIRED NO_MODULE)
 set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH})
 
 # set up standard kde build settings
@@ -62,7 +62,7 @@ if(Qt6_VERSION VERSION_EQUAL 6.8.0)
 endif()
 
 find_package(
-    KF6 ${KF_MIN_VERSION} REQUIRED
+    KF6 ${KF6_MIN_VERSION} REQUIRED
         CoreAddons
         WidgetsAddons
         DBusAddons
@@ -92,7 +92,7 @@ set_package_properties(KPipeWire PROPERTIES DESCRIPTION
 )
 
 # optional components
-find_package(KF6DocTools ${KF_MIN_VERSION})
+find_package(KF6DocTools ${KF6_MIN_VERSION})
 set_package_properties(KF6DocTools PROPERTIES DESCRIPTION
     "Tools to generate documentation"
     TYPE OPTIONAL
