Add TtToolButton with default tooltip
We have similar inline component definitions that we can consolidate.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -192,6 +192,7 @@ qt_target_qml_sources(spectacle
     Gui/ShortcutsTextBox.qml
     Gui/SizeLabel.qml
     Gui/TextContextMenuConnection.qml
+    Gui/TtToolButton.qml
     Gui/UndoRedoGroup.qml
     Gui/VideoCaptureOverlay.qml
 )
