Add hamburger menu component
Options menu contents with export and help menus as submenus

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -35,6 +35,7 @@ target_sources(spectacle PRIVATE
     VideoFormatModel.cpp
     Gui/CaptureWindow.cpp
     Gui/ExportMenu.cpp
+    Gui/FullMenu.cpp
     Gui/HelpMenu.cpp
     Gui/OptionsMenu.cpp
     Gui/TextContextMenu.cpp
@@ -172,6 +173,7 @@ qt_target_qml_sources(spectacle
     Gui/ExportMenuButton.qml
     Gui/FloatingBackground.qml
     Gui/FloatingToolBar.qml
+    Gui/FullMenuButton.qml
     Gui/Handle.qml
     Gui/HelpMenuButton.qml
     Gui/ImageCaptureOverlay.qml
