Add xml/yaml linting

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,3 +8,5 @@ include:
       - /gitlab-templates/freebsd-qt6.yml
   # Disable until flatpak CI supports Qt 6.
   #     - /gitlab-templates/flatpak.yml
+      - /gitlab-templates/xml-lint.yml
+      - /gitlab-templates/yaml-lint.yml
