Add screenshot and recording mode menus
We use Qt Widget menus because they look native, have their own windows and auto position better.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -37,12 +37,14 @@ target_sources(spectacle PRIVATE
     Gui/ExportMenu.cpp
     Gui/HelpMenu.cpp
     Gui/OptionsMenu.cpp
-    Gui/TextContextMenu.cpp
+    Gui/RecordingModeMenu.cpp
+    Gui/ScreenshotModeMenu.cpp
     Gui/SmartSpinBox.cpp
     Gui/Selection.cpp
     Gui/SelectionEditor.cpp
     Gui/SpectacleWindow.cpp
     Gui/SpectacleMenu.cpp
+    Gui/TextContextMenu.cpp
     Gui/ViewerWindow.cpp
     Gui/Annotations/AnnotationDocument.cpp
     Gui/Annotations/AnnotationTool.cpp
@@ -188,6 +190,7 @@ qt_target_qml_sources(spectacle
     Gui/RecordingFailedMessage.qml
     Gui/RecordingModeAction.qml
     Gui/RecordingModeButtonsColumn.qml
+    Gui/RecordingModeMenuButton.qml
     Gui/RecordingSettingsColumn.qml
     Gui/RecordingView.qml
     Gui/SaveAction.qml
@@ -197,6 +200,7 @@ qt_target_qml_sources(spectacle
     Gui/SavedMessage.qml
     Gui/ScreenshotFailedMessage.qml
     Gui/ScreenshotModeAction.qml
+    Gui/ScreenshotModeMenuButton.qml
     Gui/ScreenshotView.qml
     Gui/ShareErrorMessage.qml
     Gui/SharedMessage.qml
