Implement OcrManager class for text recognition
- Add OcrManager class with Tesseract integration
- Provide async OCR processing methods
- Handle OCR initialization and cleanup

Add OCR language selection to General Options

- Introduced a new combo box for selecting the OCR language in the settings dialog.
- Implemented methods to populate and refresh the OCR language options based on availability.

Add OCR action and integrate into UI toolbars

- Create OcrAction.qml for text recognition functionality
- Add OCR buttons to CaptureOverlay toolbars
- Add OCR button to ViewerPage main toolbar

Integrate OCR functionality into capture and viewer windows

Add OCR notifications and core integration

- Add OCR success/error notification events to notifyrc
- Integrate OCR manager in SpectacleCore

Remove manual translations

Implement OCR availability checks

Enhance OcrManager to load Tesseract library dynamically and check its availability.

Show info cursor on OCR tooltip icon in settings

Refactor OCR language name handling using QLocale

- Replace hardcoded/translatable language name map with dynamic lookup via QLocale and scriptToString.

Refactor Tesseract initialization to support dynamic language detection

Detect Tesseract and language packs at configure time; link directly to libtesseract

- Add tesseract_test.cpp using TessBaseAPI::GetAvailableLanguagesAsVector()
- CMake: pkg_check_modules(TESSERACT) + try_run() to check usable langpacks
  - Define HAVE_TESSERACT_OCR when successful; otherwise warn and disable OCR
- OCR: refactor OcrManager to use tesseract::TessBaseAPI (C++ API)
  - Remove QLibrary-based dynamic loading and manual symbol resolution
  - Wrap OCR code with #ifdef HAVE_TESSERACT_OCR and provide graceful fallbacks

Refactor OCR text recognition to use ResultIterator for improved accuracy

Refactor the OCR core: centralize extraction in SpectacleCore, remove direct OCR handling from windows.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -105,7 +105,7 @@ ki18n_wrap_ui(spectacle
 # Needed to compile with OpenCV
 target_compile_options (spectacle PRIVATE -fexceptions)
 
-target_include_directories(spectacle PUBLIC ${OpenCV_INCLUDE_DIRS} ${TESSERACT_INCLUDE_DIRS})
+target_include_directories(spectacle PUBLIC ${OpenCV_INCLUDE_DIRS})
 
 target_link_libraries(spectacle PRIVATE
     Qt::Concurrent
@@ -136,8 +136,13 @@ target_link_libraries(spectacle PRIVATE
     Wayland::Client
     LayerShellQt::Interface
     ${OpenCV_LIBRARIES}
-    ${TESSERACT_LIBRARIES}
 )
+
+# Link against Tesseract when OCR support is enabled
+if(HAVE_TESSERACT_OCR)
+    target_include_directories(spectacle PRIVATE ${TESSERACT_INCLUDE_DIRS})
+    target_link_libraries(spectacle PRIVATE ${TESSERACT_LIBRARIES})
+endif()
 
 # qt_add_qml_module doesn't know how to deal with headers in subdirectories so
 # make sure to add those so the headers can be found.
