Add QML linting
Right now all it does is check for single quotes in QML code, but
this could be expanded in the future.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,4 +10,5 @@ include:
   #     - /gitlab-templates/flatpak.yml
       - /gitlab-templates/xml-lint.yml
       - /gitlab-templates/yaml-lint.yml
+      - /gitlab-templates/qml-lint.yml
       - /gitlab-templates/linux-qt6-next.yml
