add support for multiple OCR languages in preferences dialog
- Switch from single ocrLanguage string to ocrLanguages string list in settings
- Add OcrLanguageSelector widget for multi-language selection
- Integrate new selector into GeneralOptionsPage and SettingsDialog

add OCR language menu to main interface

- Introduce OcrLanguageMenu and OcrLanguageMenuButton components
- Expose language selection in ViewerPage and CaptureOverlay
- Move OCR extraction logic to SpectacleCore::startOcrExtraction

Remove OCR language menu components and references from the project

Add OCR language submenu to ExportMenu

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -44,6 +44,7 @@ target_sources(spectacle PRIVATE
     Gui/SelectionEditor.cpp
     Gui/SettingsDialog/GeneralOptionsPage.cpp
     Gui/SettingsDialog/ImageSaveOptionsPage.cpp
+    Gui/SettingsDialog/OcrLanguageSelector.cpp
     Gui/SettingsDialog/SettingsDialog.cpp
     Gui/SettingsDialog/ShortcutsOptionsPage.cpp
     Gui/SettingsDialog/VideoFormatComboBox.cpp
