Note new kquickimageeditor dependency in the CI

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -24,6 +24,7 @@ Dependencies:
     'frameworks/prison': '@latest-kf6'
     'plasma/kpipewire': '@latest-kf6'
     'plasma/layer-shell-qt': '@latest-kf6'
+    'libraries/kquickimageeditor': '@latest-kf6'
     'third-party/wayland': '@latest'
 
 Options:
