--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -22,6 +22,7 @@ Dependencies:
     'frameworks/kcrash': '@latest-kf6'
     'frameworks/kstatusnotifieritem': '@latest-kf6'
     'frameworks/prison': '@latest-kf6'
+    'libraries/kquickimageeditor': '@latest-kf6'
     'plasma/kpipewire': '@latest-kf6'
     'plasma/layer-shell-qt': '@latest-kf6'
     'third-party/wayland': '@latest'
