Add cancel button to capture window to improve touchscreen usability
BUG: 490980

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -158,6 +158,7 @@ qt_target_qml_sources(spectacle
     Gui/AnnotationOptionsToolBarContents.qml
     Gui/AnnotationsToolBarContents.qml
     Gui/ButtonGrid.qml
+    Gui/CancelAction.qml
     Gui/CaptureModeButtonsColumn.qml
     Gui/CaptureOptions.qml
     Gui/CaptureOverlay.qml
