--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,3 +12,4 @@ include:
       - /gitlab-templates/yaml-lint.yml
       - /gitlab-templates/qml-lint.yml
       - /gitlab-templates/linux-qt6-next.yml
+      - /gitlab-templates/documentation.yml
